editing yaml files for domain

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,5 +1,5 @@
 site_name: KC Gaming Encyclopedia
-site_url: https://kierancollins/kc-gaming-encyclopedia.co.uk
+site_url: https://kcgamingencyclopedia.kierancollins.co.uk
 repo_url: https://github.com/KC-OU/KC-Gaming-Encyclopedia
 repo_name: KC-OU/KC-Gaming-Encyclopedia
 
